<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:popupTheme="@style/AppTheme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="仓库安防"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal|bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/loc"
                />
            <!--<TextView-->

            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/store_location"-->
            <!--android:textSize="14sp"/>-->

            <TextView
                android:id="@+id/tv_store_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_default"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingLeft="8dp"/>

            <!--<ImageView-->
            <!--android:id="@+id/iv_location_set"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@mipmap/set"-->
            <!--android:gravity="bottom"-->
            <!--/>-->

            <TextView
                android:id="@+id/tv_location_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_loc_reset"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingLeft="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal">
    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"/>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        card_view:cardCornerRadius="4dp"
        android:layout_marginRight="8dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardPreventCornerOverlap="true"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_light"/>
            <ImageView
                android:id="@+id/iv_gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_off"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infrared_light"/>
            <ImageView
                android:id="@+id/iv_infrared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_off"/>
        </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_warning"
                />
            <TextView
                android:id="@+id/tv_gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_default"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="20dp"/>
            <Button
                android:id="@+id/btn_gas_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_gas_reset"
                android:background="@color/white"
                android:textSize="14sp"
                android:paddingLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_current"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tv_gas_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_current_default"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="20dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infrared"
                />
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infrared_default"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
   </LinearLayout>
</LinearLayout>